proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/oop_empty_class.py
# Test that initializing an empty class leads to an error, as with Python.
class Foo:
